--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <tr>
                         <td class="header-logo-container" width="100">
                             <a href="https://3dlook.me/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019">
-                                <img class="header-logo" src="img/logo_white.png" alt="header-logo">
+                                <img class="header-logo" src="https://nadia-kamuz.github.io/3dlook-digital/img/logo_white.png" alt="header-logo">
                             </a>
                         </td>
                         <td valign="top" class="header-navigation-container">
@@ -33,7 +33,7 @@
                             <table width="480" height="104" align="center" border="0" cellpadding="0" cellspacing="0">
                                 <tr>
                                     <td id="logos">
-                                        <img src="img/top-header.png" usemap="#image-map">
+                                        <img src="https://nadia-kamuz.github.io/3dlook-digital/img/top-header.png" usemap="#image-map">
                                         <map name="image-map">
                                             <area target="_blank" alt="digital-fit" title="digital-fit" href="https://3dlook.me/blog/digital-fit-customization-coresight-research-features-3dlook-in-innovator-intelligence-report/?utm_source=newsletter&amp;utm_medium=email&amp;utm_campaign=email_newsletter&amp;utm_content=november1st_2019" coords="1,4,665,305" shape="rect">
                                             <area target="_blank" alt="logo" title="logo" href="https://3dlook.me/?utm_source=newsletter&amp;utm_medium=email&amp;utm_campaign=email_newsletter&amp;utm_content=november1st_2019" coords="798,1,1420,306" shape="rect">
@@ -84,11 +84,11 @@
                     <tr>
                         <td id="follow-desktop">
                             <h2>Digital Fit Customization</h2>
-                            <a href="https://3dlook.me/blog/digital-fit-customization-coresight-research-features-3dlook-in-innovator-intelligence-report/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019"><img src="img/digital.png" alt="3D Body Scanning"></a>
+                            <a href="https://3dlook.me/blog/digital-fit-customization-coresight-research-features-3dlook-in-innovator-intelligence-report/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019"><img src="https://nadia-kamuz.github.io/3dlook-digital/img/digital.png" alt="3D Body Scanning"></a>
                         </td>
                         <td id="follow-mobile">
                             <h2>Digital Fit Customization</h2>
-                            <a href="https://3dlook.me/blog/digital-fit-customization-coresight-research-features-3dlook-in-innovator-intelligence-report/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019"><img src="img/digital-small.png" alt="3D Body Scanning"></a>
+                            <a href="https://3dlook.me/blog/digital-fit-customization-coresight-research-features-3dlook-in-innovator-intelligence-report/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019"><img src="https://nadia-kamuz.github.io/3dlook-digital/img/digital-small.png" alt="3D Body Scanning"></a>
                         </td>
                     </tr>
                     <tr class="digital">
@@ -107,7 +107,7 @@
                     <tr>
                         <td id="follow-desktop">
                             <h3>Follow Us</h3>
-                            <img src="img/social-desktop-small.png" usemap="#follow-d">
+                            <img src="https://nadia-kamuz.github.io/3dlook-digital/img/social-desktop-small.png" usemap="#follow-d">
                             <map name="follow-d">
                                 <area target="_blank" alt="Twiiter" title="Twiiter" href="https://twitter.com/3dlook_me" coords="301,159,259,116" shape="rect">
                                 <area target="_blank" alt="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/company/3dlook/" coords="310,117,350,159" shape="rect">
@@ -117,7 +117,7 @@
                         </td>
                         <td id="follow-mobile">
                             <h3>Follow Us</h3>
-                            <img src="img/social-mobile-small.png" usemap="#follow-m">
+                            <img src="https://nadia-kamuz.github.io/3dlook-digital/img/social-mobile-small.png" usemap="#follow-m">
                             <map name="follow-m">
                                 <area target="_blank" alt="Twitter" title="Twitter" href="https://twitter.com/3dlook_me" coords="156,123,114,81" shape="rect">
                                 <area target="_blank" alt="Facebook" title="Facebook" href="https://www.facebook.com/3DLOOK.me/" coords="106,181,109,139,152,142,148,185" shape="poly">
@@ -134,7 +134,7 @@
                 <table width="480" class="hidden-mobile">
                     <tr>
                         <td class="avatar">
-                            <img src="img/dariia-zaporozhchenko.png" alt="Hi" width="60" height="60">
+                            <img src="https://nadia-kamuz.github.io/3dlook-digital/img/dariia-zaporozhchenko.png" alt="Hi" width="60" height="60">
                         </td>
                         <td class="contact-info">
                             <span class="name">
@@ -148,27 +148,27 @@
                                     <td>
                                         <a class="3dlook" href="https://3dlook.me/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=september_2019
 " target="_blank">
-                                            <img src="img/3dlook.png" alt="3dlook">
+                                            <img src="https://nadia-kamuz.github.io/3dlook-digital/img/3dlook.png" alt="3dlook">
                                         </a>
                                     </td>
                                     <td>
                                         <a class="linkedin" href="https://www.linkedin.com/company/3dlook/" target="_blank">
-                                            <img src="img/linkedin.png" alt="linkedin">
+                                            <img src="https://nadia-kamuz.github.io/3dlook-digital/img/linkedin.png" alt="linkedin">
                                         </a>
                                     </td>
                                     <td>
                                         <a class="instagram" href="https://www.instagram.com/3dlook_me/" target="_blank">
-                                            <img src="img/instagram.png" alt="instagram">
+                                            <img src="https://nadia-kamuz.github.io/3dlook-digital/img/instagram.png" alt="instagram">
                                         </a>
                                     </td>
                                     <td>
                                         <a class="twitter" href="https://twitter.com/3dlook_me" target="_blank">
-                                            <img src="img/twitter.png" alt="twitter">
+                                            <img src="https://nadia-kamuz.github.io/3dlook-digital/img/twitter.png" alt="twitter">
                                         </a>
                                     </td>
                                     <td>
                                         <a class="facebook" href="https://www.facebook.com/3DLOOK.me/" target="_blank">
-                                            <img src="img/facebook.png" alt="facebook">
+                                            <img src="https://nadia-kamuz.github.io/3dlook-digital/img/facebook.png" alt="facebook">
                                         </a>
                                     </td>
                                 </tr>
@@ -198,7 +198,7 @@
                     </tr>
                     <tr>
                         <td class="avatar">
-                            <img src="img/dariia-zaporozhchenko.png" alt="manager-mobile">
+                            <img src="https://nadia-kamuz.github.io/3dlook-digital/img/dariia-zaporozhchenko.png" alt="manager-mobile">
                         </td>
                         <td class="contact-info">
                             <p class="name">
@@ -212,27 +212,27 @@
                     <tr class="social-icons">
                         <td>
                             <a class="3dlook" href="https://3dlook.me/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=september_2019" target="_blank">
-                                <img src="img/3dlook.png" alt="3dlook">
+                                <img src="https://nadia-kamuz.github.io/3dlook-digital/img/3dlook.png" alt="3dlook">
                             </a>
                         </td>
                         <td>
                             <a class="linkedin" href="https://www.linkedin.com/company/3dlook/" target="_blank">
-                                <img src="img/linkedin.png" alt="linkedin">
+                                <img src="https://nadia-kamuz.github.io/3dlook-digital/img/linkedin.png" alt="linkedin">
                             </a>
                         </td>
                         <td>
                             <a class="instagram" href="https://www.instagram.com/3dlook_me/" target="_blank">
-                                <img src="img/instagram.png" alt="instagram">
+                                <img src="https://nadia-kamuz.github.io/3dlook-digital/img/instagram.png" alt="instagram">
                             </a>
                         </td>
                         <td>
                             <a class="twitter" href="https://twitter.com/3dlook_me" target="_blank">
-                                <img src="img/twitter.png" alt="twitter">
+                                <img src="https://nadia-kamuz.github.io/3dlook-digital/img/twitter.png" alt="twitter">
                             </a>
                         </td>
                         <td>
                             <a class="facebook" href="https://www.facebook.com/3DLOOK.me/" target="_blank">
-                                <img src="img/facebook.png" alt="facebook">
+                                <img src="https://nadia-kamuz.github.io/3dlook-digital/img/facebook.png" alt="facebook">
                             </a>
                         </td>
                     </tr>
