--- a/3dlook-email.html
+++ b/3dlook-email.html
@@ -591,8 +591,8 @@ button {
     margin-right: 38px !important;
   }
   .header .header-table .images {
-    padding-bottom: 30px;
-    padding-top: 30px;
+    padding-bottom: 30px !important;
+    padding-top: 30px !important;
     padding-left: 20px !important;
     padding-right: 20px !important;
   }
@@ -769,7 +769,7 @@ button {
                     <tr>
                         <td class="header-logo-container" width="100" style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;padding-left: 60px;">
                             <a href="https://3dlook.me/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" style="color: #282828;font-family: &quot;Roboto&quot;, Arial, sans-serif;text-decoration: none;">
-                                <img class="header-logo" src="https://nadia-kamuz.github.io/3dlook-digital/img/logo_white.png" alt="header-logo" style="position: relative;width: 106px;height: 16px;margin-top: 19px;">
+                                <img class="header-logo" src="https://nadia-kamuz.github.io/3dlook-digital/img/logo_white.png" alt="header-logo" style="position: relative;width: 106px;height: 16px;margin-top: 15px;">
                             </a>
                         </td>
                         <td valign="top" class="header-navigation-container" style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;text-align: right;">
@@ -799,13 +799,13 @@ button {
                             <table width="480" align="center" class="products-navigation" style="margin: 0 auto;border-collapse: collapse;border-spacing: 0;margin-bottom: 12px;margin-left: 60px;margin-top: 50px;">
                                 <tr>
                                     <td width="160" style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;">
-                                        <a href="https://3dlook.me/saia/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 0.6;transition: opacity 0.25s, color 0.25s;">Size and Fit Recommendations</a>
+                                        <a href="https://3dlook.me/saia/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 0.6;transition: opacity 0.25s, color 0.25s;">Size and Fit <br/>Recommendations</a>
                                     </td>
                                     <td width="160" style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;">
-                                        <a href="https://3dlook.me/saia-mtm/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 0.6;transition: opacity 0.25s, color 0.25s;padding-left: 55px;">Human Body <br>Measuring</a>
+                                        <a href="https://3dlook.me/saia-mtm/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 0.6;transition: opacity 0.25s, color 0.25s;padding-left: 55px;">Human Body <br/>Measuring</a>
                                     </td>
                                     <td width="160" style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;">
-                                        <a href="https://3dlook.me/virtual-dressing/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 0.6;transition: opacity 0.25s, color 0.25s;padding-left: 80px;">3D Model <br>Generation</a>
+                                        <a href="https://3dlook.me/virtual-dressing/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 0.6;transition: opacity 0.25s, color 0.25s;padding-left: 80px;">3D Model <br/>Generation</a>
                                     </td>
                                 </tr>
                             </table>
@@ -815,13 +815,13 @@ button {
                         <td style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;">
                             <table style="margin: 0 auto;border-collapse: collapse;border-spacing: 0;">
                                 <tr class="products-navigation" style="border-collapse: collapse;margin-bottom: 12px;margin-left: 60px;margin-top: 50px;">
-                                    <td style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;"><a href="https://3dlook.me/saia/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 0.6;transition: opacity 0.25s, color 0.25s;">Size and Fit Recommendations</a></td>
+                                    <td style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;"><a href="https://3dlook.me/saia/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 1;transition: opacity 0.25s, color 0.25s;">Size and Fit Recommendations</a></td>
                                 </tr>
                                 <tr class="products-navigation" style="border-collapse: collapse;margin-bottom: 12px;margin-left: 60px;margin-top: 50px;">
-                                    <td style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;"><a href="https://3dlook.me/saia-mtm/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 0.6;transition: opacity 0.25s, color 0.25s;">Human Body Measuring</a></td>
+                                    <td style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;"><a href="https://3dlook.me/saia-mtm/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 1;transition: opacity 0.25s, color 0.25s;">Human Body Measuring</a></td>
                                 </tr>
                                 <tr class="products-navigation" style="border-collapse: collapse;margin-bottom: 12px;margin-left: 60px;margin-top: 50px;">
-                                    <td style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;"><a href="https://3dlook.me/virtual-dressing/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 0.6;transition: opacity 0.25s, color 0.25s;">3D Model Generation</a></td>
+                                    <td style="font-family: &quot;Roboto&quot;, Arial, sans-serif;position: relative;z-index: 3;padding: 0;margin: 0;"><a href="https://3dlook.me/virtual-dressing/?utm_source=newsletter&utm_medium=email&utm_campaign=email_newsletter&utm_content=november1st_2019" target="_blank" style="color: #000000;font-family: &quot;Oswald&quot;, &quot;Roboto&quot;, sans-serif;text-decoration: none;display: inline-block;text-transform: uppercase;font-size: 10px;font-weight: 700;line-height: 12px;opacity: 1;transition: opacity 0.25s, color 0.25s;">3D Model Generation</a></td>
                                 </tr>
                             </table>
                         </td>
